syntax = "proto3";

package scoring;

service ScoringService {
  rpc ScoreFeedback (ScoringRequest) returns (ScoringResponse);
}

message ScoringRequest {
  string feedbackId = 1;
  string content = 2;
  string sentiment = 3;
  string category = 4;
}

message ScoringResponse {
  bool success = 1;
  double score = 2;
}
```

### Package.json files

#### api-gateway/package.json
```json
{
  "name": "api-gateway",
  "version": "1.0.0",
  "description": "API Gateway pour le syst√®me de feedback",
  "main": "server.js",
  "scripts": {
    "start": "node server.js",
    "dev": "nodemon server.js"
  },
  "dependencies": {
    "axios": "^0.27.2",
    "express": "^4.18.1",
    "express-graphql": "^0.12.0",
    "graphql": "^15.8.0"
  },
  "devDependencies": {
    "nodemon": "^2.0.19"
  }
}